Fixed some layout issues, started removing old help feature.

--- a/data/css/CDMS.css
+++ b/data/css/CDMS.css
@@ -26,11 +26,17 @@ canvas {
     margin-bottom: 1.5em; 
 }
 #content { 
-    margin: 0px auto 0px auto; padding: 25px 25px 15px 25px;
-    width: @@width@@px; min-width: 300px; overflow: auto;
-    border-left: 1px solid #444; border-top: 1px solid #444; 
+    margin: 0px auto 0px auto; padding: 12px 0px 0px 0px;
+    width:1440px; min-width: 300px; overflow: auto;
+    /* border-left: 1px solid #444; border-top: 1px solid #444; 
     border-right: 1px solid #333; border-bottom: 1px solid #333;
-    background-color: #3d3d3d;
+    background-color: #3d3d3d; */
+    float:none;
+}
+#subcontent {
+    padding: 0px; margin:0px;
+    float:none;
+    width: 1400px;
 }
 
 .scmd, a.scmd:link {
